syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.github.johnlayton.sidwellcourt";
option java_outer_classname = "Sidwellcourt";
option objc_class_prefix = "HLW";

package sidwellcourt;

service SidwellcourtService {
  rpc SayHello (SidwellcourtRequest) returns (SidwellcourtResponse) {}
}

message SidwellcourtRequest {
  int64 id = 1;
  string name = 2;
}

message SidwellcourtResponse {
  string id = 1;
  string message = 2;
}